--- a/config/boards/shields/minideck/Kconfig.conf
+++ b/config/boards/shields/minideck/Kconfig.conf
@@ -5,3 +5,4 @@ CONFIG_ZMK_BLE=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_KEYBOARD_NAME="MiniDeck"
